--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
   "description": "Skeleton app for zobaken/one framework",
   "type": "project",
   "license": "MIT",
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../one"
+    }
+  ],
   "require": {
     "zobaken/one": "*"
   }
