--- a/www/.htaccess
+++ b/www/.htaccess
@@ -2,4 +2,4 @@ RewriteEngine On
 RewriteBase /
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /one/ [L]
+RewriteRule . / [L]
